plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.callv2.dns'

bootJar {
    archiveFileName = 'application.jar'
    destinationDirectory = file("${rootProject.buildDir}/libs")
}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {

    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.1'

    implementation 'org.projectlombok:lombok:1.18.36'
	annotationProcessor 'org.projectlombok:lombok:1.18.36'

	testImplementation( 'org.springframework.boot:spring-boot-starter-test')

}

tasks.named('test') {
	useJUnitPlatform()
}
